# md-data

./: .gitmodules  README.md
2023/GeTe/md/: plot.py
2023/H2O/md/: plot.py
2023/LiGePS/md/: hist_nvnmd.txt  ref_MSD3.txt
2023/Mg/md/: plot_cmp.py
code/: .gitignore  CITATIONS.bib  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml  setup.py
code/.github/: labeler.yml
code/.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  generic-issue.yml  parameters.yml
code/.github/workflows/: build_cc.yml  package_c.yml  test_cc.yml  test_python.yml
code/deepmd/: __init__.py
code/deepmd-kit/: README.md  pyproject.toml  setup.py
code/deepmd-kit/deepmd/: __init__.py
code/deepmd-kit/deepmd_cli/: main.py
code/deepmd-kit/doc/: credits.rst  index.rst
code/deepmd-kit/source/: CMakeLists.txt
code/deepmd/descriptor/: se_a.py
code/deepmd/entrypoints/: test.py
code/deepmd/fit/: __init__.py
code/deepmd/infer/: model_devi.py
code/deepmd/loss/: __init__.py
code/deepmd/model/: __init__.py
code/deepmd/train/: run_options.py
code/deepmd_cli/: main.py
code/doc/: api_op.rst  cli.rst  conf.py
code/doc/data/: data-conv.md  dpdata.md  index.md  index.rst  system.md
code/doc/freeze/: index.md
code/doc/inference/: cxx.md  index.md  index.rst  python.md
code/doc/install/: easy-install.md  index.md  index.rst  install-from-source.md
code/doc/mdpu/: hardware.md  index.md  mdpu.md
code/doc/troubleshooting/: installation.md
code/examples/infer_water/: CMakeLists.txt  README.md  infer_water.c  infer_water.cpp  infer_water_hpp.cpp  infer_water_nlist.cpp
code/examples/methane/: run.sh
code/mdpu_cli/: main.py
code/mdpukit/: __init__.py  common.py  env.py  lmp.py
code/mdpukit/cluster/: local.py  slurm.py
code/mdpukit/descriptor/: descriptor.py  loc_frame.py  se.py  se_a.py  se_atten.py
code/mdpukit/entrypoints/: __init__.py  convert.py  doc.py  freeze.py  main.py  neighbor_stat.py  test.py  train.py
code/mdpukit/fit/: ener.py  fitting.py
code/mdpukit/infer/: deep_eval.py  deep_pot.py  model_devi.py
code/mdpukit/loggers/: loggers.py
code/mdpukit/loss/: ener.py  loss.py
code/mdpukit/model/: ener.py  model.py
code/mdpukit/op/: __init__.py
code/mdpukit/train/: run_options.py  trainer.py
code/mdpukit/utils/: __init__.py  argcheck.py  batch_size.py  compat.py  convert.py  data.py  data_system.py  finetune.py  graph.py  learning_rate.py  multi_init.py  neighbor_stat.py  network.py  parallel_op.py  path.py  sess.py  spin.py  tabulate.py  type_embed.py
code/mdpukit_cli/: __init__.py
code/source/: CMakeLists.txt
code/source/api_c/: CMakeLists.txt
code/source/api_c/tests/: CMakeLists.txt  test_deepdipole_hpp.cc  test_deeppolar_hpp.cc  test_deeppot_a_fparam_aparam.cc  test_deeppot_a_fparam_aparam_nframes.cc  test_deeppot_a_hpp.cc  test_deeppot_a_nframes_hpp.cc  test_deeppot_model_devi_fparam_aparam.cc  test_deeppot_model_devi_hpp.cc  test_dipolecharge.cc  test_mdpu_exception.cc  test_mixed_type.cc  test_read_file_to_string.cc  test_select_by_type.cc  test_select_map.cc  test_utils.h
code/source/api_cc/: CMakeLists.txt
code/source/cmake/: cmake_lammps.cmake.in
code/source/config/: CMakeLists.txt
code/source/install/: build_cc.sh  build_from_c.sh  build_tf.py  docker_package_c.sh  docker_test_package_c.sh  package_c.sh
code/source/lib/: CMakeLists.txt
code/source/lib/src/cuda/cudart/: CMakeLists.txt  cudart_stub.cc
code/source/md/: CMakeLists.txt  mdnn.cc
code/source/op/: CMakeLists.txt  _add_flt_mdpu_grad.py  _copy_flt_mdpu_grad.py  _dotmul_flt_mdpu_grad.py  _flt_mdpu_grad.py  _gelu.py  _map_flt_mdpu_grad.py  _matmul_fitnet_mdpu_grad.py  _matmul_flt2fix_mdpu.py  _matmul_flt_mdpu_grad.py  _mul_flt_mdpu_grad.py  _prod_force_grad.py  _prod_force_se_a_grad.py  _prod_force_se_a_mask_grad.py  _prod_force_se_r_grad.py  _prod_virial_grad.py  _prod_virial_se_a_grad.py  _prod_virial_se_r_grad.py  _quantize_mdpu_grad.py  _soft_min_force_grad.py  _soft_min_virial_grad.py  _tabulate_grad.py  _tanh4_flt_mdpu_grad.py  copy_flt_mdpu.cc  custom_op.cc  custom_op.h  descrpt.cc  descrpt_se_a_ef.cc  descrpt_se_a_ef_para.cc  descrpt_se_a_ef_vert.cc  descrpt_se_a_mask.cc  ewald_recp.cc  gelu_multi_device.cc  map_aparam.cc  map_flt_mdpu.cc  matmul_flt2fix_mdpu.cc  neighbor_stat.cc  pair_tab.cc  pairwise.cc  prod_env_mat_multi_device.cc  (+24 more)
code/source/tests/: .gitignore  CMakeLists.txt  common.py  test_mdpu_entrypoints.py  test_mdpu_op.py
data/: readme.md
data/Au/md/: get_eos.py  main.py  plot_eos.py
data/Au/train/: train_cnn.json  train_qnn.json
data/Cu/md/: main.py  plot_strain_stress.py
data/Cu/train/: train_cnn.json  train_qnn.json
data/GeTe/md/: main.py  plot.py
data/GeTe/train/: train_cnn.json  train_qnn.json
data/H2O/md/: main.py  plot.py
data/H2O/train/: train_cnn.json  train_qnn.json
data/LiGePS/md/: main.py
data/LiGePS/train/: train_cnn.json  train_qnn.json
data/Mg/md/: main.py  plot_cmp.py
(+1597 files in other folders)
